[package]
name = "kye"
version = "0.1.0"
authors = ["Kate <kate@elide.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
itertools = "0.10.0"
clap = { git = "https://github.com/clap-rs/clap", rev = "08b2f4d4289eca8a9225bbc56d5a5ad1e99e38e1" }

